# curitiba_bus_eta

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cloud/ingest_locations/: convert.py  fetch.py  ingest.py  keys.py  main.py  requirements.txt
cloud/ingest_locations_setup/: create_dataset.py  create_table.py  deploy.sh  locations_schema.json  update.sh
cloud/update_lines/: fetch.py  line_names.json  main.py  requirements.txt  update.py
cloud/update_lines_setup/: create_dataset.py  create_table.py  deploy.sh  update.sh
cloud/update_routes/: fetch.py  keys.py  main.py  update.py
cloud/update_routes_setup/: create_table.py  deploy.sh  update.sh
cloud/update_routes_unified/: calculate.py  fetch.py  generate.py  line_numbers_to_route_ids_map.json  main.py  map.py  requirements.txt  update.py
cloud/update_routes_unified_setup/: create_table.py  deploy.sh  update.sh
cloud/update_stops/: fetch.py  main.py  update.py
cloud/update_stops_setup/: create_dataset.py  create_table.py  deploy.sh  update.sh
cloud/update_stretches/: fetch.py  main.py  requirements.txt  update.py
cloud/update_stretches_setup/: create_table.py  deploy.sh  update.sh
curitiba_bus_eta/: fetch.py
docs/: mkdocs.yml
docs/docs/: index.md
